# pointcloud_to_grid

./: README.md
pointcloud_to_grid/: CMakeLists.txt  package.xml
pointcloud_to_grid/cfg/: MyParams.cfg
pointcloud_to_grid/config/: rl_params.yaml
pointcloud_to_grid/doc/: default.rviz
pointcloud_to_grid/include/pointcloud_to_grid/: pointcloud_to_grid_core.hpp
pointcloud_to_grid/launch/: demo.launch  rl_sigmoid_training.launch
pointcloud_to_grid/msg/: RLSigmoidParams.msg
pointcloud_to_grid/scripts/: carla_rl_env.py  evaluate_model.py  rl_inference_server.py  train_sigmoid.py
pointcloud_to_grid/src/: pointcloud_to_grid_node.cpp  rl_sigmoid_optimizer.cpp
